<resources>

    // Activity
    <string name="app_name">Simple DB app</string>
    <string name="action_settings">Settings</string>


    //Main fragment
    <string name="search">Поиск сотрудников</string>
    <string name="add_employee">Добавить сотдрудника</string>


    //Add_employee fragment
    <string name="add_header">Добавление сотрудника</string>
    <string name="hire_date">Дата найма:</string>
    <string name="employee_name">Имя:</string>
    <string name="employee_lastname">Фамилия:</string>
    <string name="employee_fathername">Отчество:</string>
    <string name="department_name">Название подразделения</string>

    <string name="add_confirm_btn">Добавить</string>
    <string name="cancel_btn">Отмена</string>

    <string name="add_success">Сотрудник успешно добавлен</string>

    //Search fragment
    <string name="start_date">С</string>
    <string name="end_date">По</string>


    //Hints
    <string name="date_hint">Нажмите для выбора даты</string>

    //Departments
    <string-array name="departments">
        <item>department 1</item>
        <item>department 2</item>
        <item>department 3</item>
    </string-array>

    //Search selector
    <string-array name="search_selector">
        <item>ФИО</item>
        <item>отделу</item>
        <item>работавшим в период</item>
    </string-array>



</resources>
