<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/search" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="Поиск по:" />

        <Spinner
            android:id="@+id/search_selector_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.7" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/FIO_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/employee_name" />

            <EditText
                android:id="@+id/field_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:ems="10"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/last_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_lastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/employee_lastname" />

            <EditText
                android:id="@+id/field_lastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:ems="10"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fathername_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/employee_fathername" />

            <EditText
                android:id="@+id/field_fathername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:ems="10"
                android:inputType="textPersonName" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dates_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/start_dates_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/tv_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/start_date" />

            <TextView
                android:id="@+id/field_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:hint="@string/date_hint"
                android:focusable="auto"
                android:clickable="true"
                android:onClick="onClick"
                />
                 />
         </LinearLayout>
        <LinearLayout
            android:id="@+id/end_dates_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/end_date" />

            <TextView
                android:id="@+id/field_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:hint="@string/date_hint"
                android:focusable="auto"
                android:clickable="true"
                android:onClick="onClick"
                />
        </LinearLayout>
    </LinearLayout>

    <Spinner
        android:id="@+id/search_departments_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:visibility="visible" />

</LinearLayout>